      do_procinit().
    - Port start-stop-daemon process handling to Mac OS X.
      Based on a patch by Mo McRoberts <mo@nevali.net>.
    - Port start-stop-daemon process handling to AIX.
    - Fix lookup by name on update-alternatives --config. The code was wrong
      and not working at least on Mac OS X, making the test suite to fail.
  * Perl modules:
    - Obsolete Source-Version substvar in Dpkg::Substvars by emitting errors.
    - Rework keyring hooks in Dpkg::Vendor. Deprecate the keyrings hook, and
      add package-keyrings, archive-keyrings and archive-keyrings-historic
      hooks. Prompted by Johannes Schauer <josch@debian.org>.
    - Make the Dpkg::Substavars parse() method return the number of substvars
      parsed.
    - Add new set_field_substvars() method to Dpkg::Substvars.
    - Fix reproducible source package support in Dpkg::Source::Archive, by
      sorting the tar contents with --sort=name.
    - Prefix private Dpkg::Source::Package::* functions with _.
    - Defer filehandle closures in Dpkg::IPC::spawn() to avoid double-close.
      Closes: #839905, #840293
    - Always map the build type to the shortest string form in
      Dpkg::Build::Type::get_build_options_from_type().
    - Change Dpkg::Compression::FileHandle to inherit directly from IO::File
      instead of FileHandle.
  * Packaging:
    - Add liblocale-gettext-perl to libdpkg-perl Recommends.
    - Wrap and document dependency relationships.
    - Remove obsolete dependency relationships, since Debian oldstable.
    - Remove update-alternatives, dpkg-divert and dpkg-statoverride
      compatibility symlinks, again.
    - Use perl:Depends via dh_perl instead of a hardcoded perl in Depends.
    - Remove unused dh_strip from binary_indep target.
    - Remove ancient upgrade code from maintainer scripts (before 1.15.x).
    - Stop compressing the dpkg.deb package with gzip.
  * Documentation:
    - Update custom changelog parser API support status in README.api.