@@ -47,6 +47,10 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
     - Port start-stop-daemon process handling to AIX.
     - Fix lookup by name on update-alternatives --config. The code was wrong
       and not working at least on Mac OS X, making the test suite to fail.
+    - Only use gzip --rsyncable in Dpkg::Compression on Debian and hopefully
+      derivatives, by using perl's $Config{cf_by} variable to key on. The
+      Debian-specific --rsyncable option should have never been accepted for
+      use in dpkg to begin with.
   * Perl modules:
     - Obsolete Source-Version substvar in Dpkg::Substvars by emitting errors.
     - Rework keyring hooks in Dpkg::Vendor. Deprecate the keyrings hook, and
